--- a/container-scripts/build
+++ b/container-scripts/build
@@ -67,7 +67,7 @@ cp -r $app_dir/. $build_root
 export APP_DIR="$app_dir"
 export HOME="$app_dir"
 export REQUEST_ID=$(openssl rand -base64 32)
-export STACK=kel-ubuntu-14
+export STACK=${STACK:-kel-ubuntu-14}
 
 ## Buildpack detection
 
